deeplabv3plus added

--- a/config.json
+++ b/config.json
@@ -37,5 +37,10 @@
   "cityscapes":
   {
     "data_path": "/home/dannyhung/LightNet/datasets/cityscapes/"
+  },
+
+  "carla":
+  {
+    "data_path": "/home/dannyhung/pytorch-semseg/carla/"
   }
 }
