--- a/.gitignore
+++ b/.gitignore
@@ -99,9 +99,10 @@ ENV/
 .ropeproject
 
 # Danny Local laptop
-config.json
 cityscapes/
 carla/
 pspnet101_cityscapes.caffemodel
 mask.npy
 test_video.mp4
+config.json
+checkpoints
